fixed z-index

--- a/style.css
+++ b/style.css
@@ -1,51 +1,12 @@
 body {
-    font-family: ;
+    margin: 0;
+    padding: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 header {
     background-color: black;
     margin-bottom: 40px;
-}
-header h1 {
-    color: white;
-    text-align: center;
-    margin: 0;
-    padding-bottom: 8px;
-}
-header nav {
     display: flex;
-    justify-content: center;
-}
-header nav ul {
-    display: flex;
-    padding-left: 4px;
-    list-style: none;
-}
-header nav ul li a {
-    color: white;
-    font-size: 16px;
-    text-decoration: none;
-    margin-right: 20px;
-}
-header nav ul li:last-child a {
-    margin-right: 0;
-}
-@media all and (min-width: 600px) {
-    header {
-        display: flex;
-        justify-content: space-between;
-        padding: 0 30px;
-    }
-    header h1 {
-        margin: 14px 0;
-        font-size: 54px;
-    }
-    header nav ul {
-        align-items: center;
-    }
-    header nav ul li a {
-        font-size: 22px;
-    }
-    header nav ul li a:hover {
-        color: #bdbdbd;
-    }
+    flex-direction: column;
+    color: brown;
 }
